--- a/source/css/main.scss
+++ b/source/css/main.scss
@@ -14,6 +14,15 @@ body {
   line-height: $line-height;
   color: $color-font;
   margin: 0;
+
+  a {
+    color: $color-active;
+    text-decoration: none;
+
+    &:hover {
+      color: $color-hover
+    }
+  }
 }
 
 body.dark {
@@ -21,7 +30,12 @@ body.dark {
   color: $dark-color-font;
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   padding-top: 61px;
   margin-top: -61px;
 }
@@ -72,22 +86,21 @@ h1,h2,h3,h4,h5,h6 {
   padding: 0 15px;
   margin: 0 300px 0 0;
   width: auto;
-  @include mobile {
-    margin: 0;
+
+  @include tablet-mobile {
+    margin-right: 0;
     padding: 0 30px;
-  }
-  @include tablet {
-    margin-right: 200px;
-    padding: 0 30px 0 15px;
   }
 }
 
 .main__content--index .main__content-inner {
   margin-left: 300px;
-  margin-right: 200px;
+  margin-right: 300px;
+
   @include mobile {
     margin: 0;
   }
+
   @include tablet {
     margin-right: 0;
   }
